fix: update dynamic value in json content

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,5 +1,5 @@
 {
-  "found_results_feature_title": "Found {found_value}",
+  "found_results_feature_title": "Found {found_results_value}",
   "found_results_value": {
     "none": "0 country",
     "one": "1 country",
