--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -29,5 +29,8 @@
   "status_options": {
     "unMember": "UN 회원국",
     "independent": "독립국"
-  }
+  },
+  "no_match_fallback_message": "검색 결과를 찾을 수 없습니다",
+  "fetch_loading_message": "불러오는 중...",
+  "fetch_error_message": "국가 정보를 불러올 수 없습니다. 잠시 후 다시 이용해주세요."
 }
