--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -18,19 +18,20 @@
     "Europe": "유럽",
     "Oceania": "오세아니아"
   },
-  "sorter_title": "정렬",
+  "sorter_title": "정렬 기준",
   "sorter_options": {
     "population": "인구",
     "name": "명칭",
     "area": "면적",
     "region": "지역"
   },
-  "status_title": "상태",
+  "status_title": "국가 상태",
   "status_options": {
     "unMember": "UN 회원국",
     "independent": "독립국"
   },
-  "no_match_fallback_message": "검색 결과를 찾을 수 없습니다",
+  "no_match_fallback_message": "해당하는 국가를 찾을 수 없습니다",
   "fetch_loading_message": "불러오는 중...",
-  "fetch_error_message": "국가 정보를 불러올 수 없습니다. 잠시 후 다시 이용해주세요."
+  "fetch_error_message": "국가 정보를 불러올 수 없습니다. 잠시 후 다시 이용해주세요.",
+  "search_field_placeholder": "명칭이나 지역으로 검색"
 }
