--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -33,5 +33,6 @@
   "no_match_fallback_message": "No countries found for this search.",
   "fetch_loading_message": "Loading...",
   "fetch_error_message": "Country data isn't available at the moment. Pease try again later.",
-  "search_field_placeholder": "Search by name or region..."
+  "search_field_placeholder": "Search by name or region...",
+  "language_selector": "Lanuage"
 }
