--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -33,5 +33,6 @@
   "no_match_fallback_message": "해당하는 국가를 찾을 수 없습니다",
   "fetch_loading_message": "불러오는 중...",
   "fetch_error_message": "국가 정보를 불러올 수 없습니다. 잠시 후 다시 이용해주세요.",
-  "search_field_placeholder": "명칭이나 지역으로 검색"
+  "search_field_placeholder": "명칭이나 지역으로 검색",
+  "language_selector": "언어"
 }
