Format numbers to locale (close #5)

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,7 +3,7 @@
     "flag": "Flag",
     "name": "Name",
     "population": "Population",
-    "area": "Area",
+    "area": "Area (km²)",
     "region": "Region"
   },
   "found_results_message_zero": "No countries found",
